[package]
name = "rust_roguelike_rendering_glium"
version = "0.1.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.27.0"
rust_roguelike_core = { path = "../rust_roguelike_core" }
